nav bar and about page added.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,6 +2,7 @@
 <head>
   <title>TicTac</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
