--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,8 +1,8 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
 
 {% block body %}
-<div class="block1">
+<div class="">
 <h1>Hello World!</h1>
 <img src="http://www.naturalprogramming.com/images/smilingpython.gif">
 {% endblock %}
