nav size a little better.

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
 
-<div class="headline">This is a Tic Tac Toe game against an AI using a nuero network!
+<div class="headline">
+  This is a Tic Tac Toe game against an AI using a nuero network!
+  Click or Tap to play or visit the about page to learn more.
 </div>
-
-<div class="">Click or Tap to play or visit the about page to learn more.</div>
 
 <div class="board">
   <div class="row">
