--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -6,21 +6,23 @@
   Click or Tap to play or visit the about page to learn more.
 </div>
 
-<div class="board">
-  <div class="row">
-    <div class="square"> </div>
-    <div class="square"> </div>
-    <div class="square"> </div>
-  </div>
+<div class="container">
+  <div class="board">
     <div class="row">
-    <div class="square"> </div>
-    <div class="square"> </div>
-    <div class="square"> </div>
-  </div>
-    <div class="row">
-    <div class="square"> </div>
-    <div class="square"> </div>
-    <div class="square"> </div>
+      <div class="square"> </div>
+      <div class="square"> </div>
+      <div class="square"> </div>
+    </div>
+      <div class="row">
+      <div class="square"> </div>
+      <div class="square"> </div>
+      <div class="square"> </div>
+    </div>
+      <div class="row">
+      <div class="square"> </div>
+      <div class="square"> </div>
+      <div class="square"> </div>
+    </div>
   </div>
 </div>
 {% endblock %}
