--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-
-<div class="col-xs-12 col-sm-6">
+<div class="col-8 offset-2 col-sm-6 offset-sm-3 lead marg">
   This is a Tic Tac Toe game against an AI using a nueral network!
 </div>
 
-<div class="col-xs-12 col-sm-6 col-sm-push-6">
+<div class="col-12 col-sm-8 offset-sm-2 marg">
   <div class="wrapper">
     <div class="board">
       <div class="row">
@@ -27,7 +26,8 @@
   </div>
 </div>
 
-<div class="col-xs-12 col-sm-6">
+<div class="col-8 offset-2 col-sm-6 offset-sm-3 lead marg">
   Click/Tap to play or visit the about page to learn more.
 </div>
+
 {% endblock %}
