--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -39,12 +39,11 @@ body {
 }
 .square {
   background: white;
+  color: #606060;
   display: table-cell;
   vertical-align: middle;
   width: 32%;
   height: 100%;
-  color: Blue;
-  /*padding: 7%;*/
   font-weight: bold;
   font-size: calc(4vw + 4vh + 2vmin);
   text-align: center;
@@ -54,11 +53,4 @@ body {
    margin-top: 5vh;
    margin-bottom: 5vh;
  }
- 
- .X {
-   color: #606060
- }
- 
-.O {
-  color: #2d2d2d
-}
+
