--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -30,6 +30,6 @@
   Click/Tap to play or visit the about page to learn more.
 </div>
 
- <div class="game-over"></div>  
+ <div class="game-over text-center"><div class="content"></div></div>  
 
 {% endblock %}
