--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -2,7 +2,37 @@
 
 
 {% block body %}
-<div class="">
-<h1>Hello World!</h1>
+<div class="container">
+<div class="person">
+<h2 class="name">W. Ely Paysinger</h2>
+<p class="Description">Is a pretty cool guy and doesn't afraid of anything</p>
+<a class="github_link" href="https://github.com/W-Ely"><p>github</p></a>
+</div>
+
+<div class="person">
+<h2 class="name">Erik Enderlein</h2>
+<p class="Description">Is literally perfect in every way.</p>
+<a class="github_link" href="https://github.com/endere"><p>github</p></a>
+</div>
+
+<div class="person">
+<h2 class="name">Chris Hudson</h2>
+<p class="Description">Likes long walks on the beach.</p>
+<a class="github_link" href="https://github.com/cahudson94"><p>github</p></a>
+</div>
+
+<div class="person">
+<h2 class="name">Alex Short</h2>
+<p class="Description">Ostensibly likes kittens.</p>
+<a class="github_link" href="https://github.com/shortaj"><p>github</p></a>
+</div>
+
+<div class="person">
+<h2 class="name">Sean Beseler</h2>
+<p class="Description">yes.</p>
+<a class="github_link" href="https://github.com/SeanBeseler"><p>github</p></a>
+</div>
+</div>
+
 <img src="http://www.naturalprogramming.com/images/smilingpython.gif">
 {% endblock %}
