--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="col-12 col-sm-8 offset-sm-2 lead marg wrapper">
   <div>
-    This is a Tic Tac Toe game against an AI using a nueral network!
+    This is a Tic Tac Toe game against an AI using a neural network!
   </div>
   <p>
     <div class="marg">
